src/test/ui/generic-associated-types/parse/trait-path-expressions.stderr
error: expected expression, found `)`
  --> $DIR/trait-path-expressions.rs:6:39
   |
LL |   fn f1<'a>(arg : Box<dyn X< 1 = 32 >>) {}
   |                              -        ^ expected expression
   |                              |
   |                              while parsing a const generic argument starting here

error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-expressions.rs:16:36
   |
LL |   fn f2<'a>(arg : Box<dyn X< { 1 } = 32 >>) {}
   |                                  - ^ expected one of `,`, `:`, or `>`
   |                                  |
   |                                  maybe try to close unmatched angle bracket
   |
help: you might have meant to end the type parameters here
   |
LL |   fn f2<'a>(arg : Box<dyn X< { 1 }> = 32 >>) {}
   |                                   +

error: aborting due to 2 previous errors

